force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__AppointmentPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointmentPriority__c</fullName>
    <label>Appointment Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointmentPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>