force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__AppointmentReasonCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointmentReasonCodeId__c</fullName>
    <label>Appointment Reason Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointmentReasonCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>