force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__rel_1726825144644_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825144644_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceAppointment_AddressId_map_Add_rel</label>
    <referenceTo>ssot__Address__dlm</referenceTo>
    <relationshipLabel>ServiceAppointment_AddressId_map_Add_rel</relationshipLabel>
    <relationshipName>rel_1726825144644_end</relationshipName>
    <type>Lookup</type>
</CustomField>